--- a/src/Project/Website/code/Views/BaseLayout.cshtml
+++ b/src/Project/Website/code/Views/BaseLayout.cshtml
@@ -9,10 +9,20 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>Sitecore Demo</title>
+
+    <!-- BOOTSTRAP -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </head>
 <body>
-    <div>
-        <h2>Welcome to Sitecore</h2>
-    </div>
+    <!-- This is Default Layout Page for all Pages -->
+    <!-- Components of the page loads on this loayout based on controller rendering-->
+    <!-- we need to create seprate MVC for each component & load in respecive placeholders to load in each item-->
+    <!-- Add controller rendering + Layout on standardValues in the template -->
+
+    <!-- LOADING Controllers(Components) in Placeholders -->
+    <div>@Html.Sitecore().Placeholder("trn-header")</div>
+    <div>@Html.Sitecore().Placeholder("trn-main")</div>
+    <div>@Html.Sitecore().Placeholder("trn-footer")</div>
 </body>
 </html>
